[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/player.png" type="Texture" id=2]
[ext_resource path="res://Assets/exhaust.png" type="Texture" id=3]
[ext_resource path="res://Assets/laser_sfx.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/explosion.wav" type="AudioStream" id=5]

[node name="Player" type="KinematicBody2D"]
collision_layer = 15
collision_mask = 15
script = ExtResource( 1 )

[node name="Exhaust" type="Sprite" parent="."]
position = Vector2( 0, 40 )
scale = Vector2( 1, 0.6 )
texture = ExtResource( 3 )

[node name="Player" type="Sprite" parent="."]
scale = Vector2( 0.6, 0.75 )
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2( 0.6, 0.75 )
polygon = PoolVector2Array( 8, -36.1, 18.2, -17.5, 19.4, -17.5, 56, -0.299999, 56, 12.7, 39.8, 37.5, 28.8, 37.5, 18.5, 34.9, 16.5, 37.5, -17, 37.5, -17, 36.8, -19.8, 35.3, -32.8, 37.5, -41, 37.5, -41, 36.1, -56, 14.9, -56, 0.5, -20, -16.8, -20, -17.6, -14, -21.6, -14, -23.9, -8, -36.9, -8, -37.5, 8, -37.5 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( -5, -33, -15, -19, -43, 4, -30, 30, -14, 30, -8, 33, 5, 32, 13, 28, 28, 34, 41, 0, 19, -16, 13, -24, 6, -33 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.5, 1.5 )
limit_left = 0
limit_top = 0
limit_right = 2560
limit_bottom = 2602

[node name="Shoot_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -30.0

[node name="Explosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="finished" from="Shoot_Sound" to="." method="_on_Shoot_Sound_finished"]
[connection signal="finished" from="Explosion" to="." method="_on_Explosion_finished"]
